--- a/music_controller/frontend/package.json
+++ b/music_controller/frontend/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@material-ui/core": "^4.11.2"
   }
 }
