--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 **/__pycache__
+music_controller/api/__pycache__/views.cpython-310.pyc
+music_controller/api/__pycache__/urls.cpython-310.pyc
+music_controller/api/__pycache__/serializers.cpython-310.pyc
+music_controller/api/__pycache__/models.cpython-310.pyc
