--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ music_controller/api/__pycache__/views.cpython-310.pyc
 music_controller/api/__pycache__/urls.cpython-310.pyc
 music_controller/api/__pycache__/serializers.cpython-310.pyc
 music_controller/api/__pycache__/models.cpython-310.pyc
+music_controller/db.sqlite3
